@@ -1,3 +1,7 @@
+2010-08-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-07-06
+        * Correction to profile fill arguments.
+
 2010-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-07-05
         * Check for uninitialised variables.
